--- a/basic_scatter.html
+++ b/basic_scatter.html
@@ -7,9 +7,9 @@
 
 <script>
 
-let margin = {top: 30, right: 60, bottom: 30, left: 60},
-    container_width = 350,
-    container_height = 350,
+let margin = {top: 10, right: 30, bottom: 30, left: 60},
+    container_width = 460,
+    container_height = 400,
     graph_width = container_width - margin.left - margin.right,
     graph_height = container_height - margin.top - margin.bottom;
 
@@ -20,69 +20,48 @@ let graph_obj = graph_div
     .attr("id", "graph_obj")
     .attr("width", container_width)
     .attr("height", container_height)
-    .attr("style", "background: grey");
+    .attr("style", "background: lightgrey");
 let graph_elems = graph_obj
   .append("g")
     .attr("id", "graph_elems")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-// x scale and axis
-let x = d3.scaleLinear()
-  .domain([0, 100])
-  .range([0, graph_width]);
+// read data
+d3.csv("https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/2_TwoNum.csv", function(sample_data) {
 
-let x_axis = graph_elems
-  .append('g')
-    .attr("id", "x_axis")
-    .attr("transform", "translate(0," + graph_height + ")")
-    .call(d3.axisBottom(x));
+  // add x axis
+  let x = d3.scaleLinear()
+    .domain([0, 4000])
+    .range([0, graph_width]);
 
-// y scale and axis
-let y = d3.scaleLinear()
-    .domain([0, 100])
-    .range([graph_height, 0]);
+  let x_axis = graph_elems
+    .append('g')
+      .attr("id", "x_axis")
+      .attr("transform", "translate(0," + graph_height + ")")
+      .call(d3.axisBottom(x));
 
-let y_axis = graph_elems
-  .append('g')
-    .attr("id", "y_axis")
-    .call(d3.axisLeft(y));
+  // add y axis
+  let y = d3.scaleLinear()
+      .domain([0, 500000])
+      .range([graph_height, 0]);
 
-// data
-let my_data = [
-  {x:50, y:20, r:23, dur:1400, delay:1400, color:"pink"},
-  {x:80, y:50, r:20, dur:1800, delay:1800, color:"blue"},
-  {x:40, y:60, r:18, dur:1600, delay:2300, color:"purple"},
-  {x:40, y:90, r: 10, dur:2800, delay:2800, color:"green"},
-  {x:10, y:20, r:4, dur:2800, delay:3800, color:"red" }]
+  let y_axis = graph_elems
+    .append('g')
+      .attr("id", "y_axis")
+      .call(d3.axisLeft(y));
 
-// binding data
-let data_points = graph_elems
-  .selectAll("data_points")
-  .data(my_data)
-  .enter()
-  .append("circle")
-    .attr("cx", function(d){ return x(d.x) })
-    .attr("cy", function(d){ return y(d.y) })
-    .attr("class", "data_point")
-    .attr("fill", function(d){ return d.color })
-    .attr("r", function(d){ return d.r });
+  // binding data
+  let data_points = graph_elems
+    .selectAll("data_points")
+    .data(sample_data)
+    .enter()
+    .append("circle")
+      .attr("cx", function(d){ return x(d.GrLivArea) })
+      .attr("cy", function(d){ return y(d.SalePrice) })
+      .attr("class", "data_point")
+      .attr("fill", "#69b3a2")
+      .attr("r", 1.5);
 
-// experiment with exit() function
-/*my_data.pop()
-
-graph_elems
-  .selectAll(".data_point")
-  .data(my_data)
-  .exit()
-  .remove();*/
-
-// add transition
-let trans_0 = d3.selectAll(".data_point")
-   .transition("trans_0")
-     .delay(function(d) { return d.delay;})
-     .duration(function(d) { return d.dur;} )
-     .ease(d3.easeElastic)
-   .attr("cx", 50)
-   .attr("cy", 80);
+});
 
 </script>
