--- a/basic_scatter_brush_area.html
+++ b/basic_scatter_brush_area.html
@@ -62,6 +62,10 @@ d3.csv("https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_data
       .attr("fill", "#69b3a2")
       .attr("r", 1.5);
 
+  // add brush area
+  graph_obj
+    .call(d3.brush());
+
 });
 
 </script>
