modify style of selected

--- a/basic_scatter_brush_area_update.html
+++ b/basic_scatter_brush_area_update.html
@@ -3,6 +3,15 @@
 
 <div id="graph_div"></div>
 
+<!-- style of selected circles -->
+<style>
+  .selected {
+    opacity: 1 !important;
+    stroke: black;
+    stroke-width: 1px;
+  }
+</style>
+
 <script src="https://d3js.org/d3.v4.js"></script>
 
 <script>
