--- a/basic_map.html
+++ b/basic_map.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
-<!-- Load d3.js -->
+<!-- Load d3.js and relevant mapping libraries -->
 <script src="https://d3js.org/d3.v4.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
 
-<!-- Create an element where the map will take place -->
-<svg id="my_dataviz" width="400" height="300"></svg>
+<!-- create an svg element where the map will live -->
+<svg id="my_map" width="400" height="300"></svg>
 
 <script>
 
-// The svg
-var svg = d3.select("svg"),
-    width = +svg.attr("width"),
-    height = +svg.attr("height");
+// store some variables for svg and attributes
+let my_map = d3.select("#my_map"),
+    map_width = +my_map.attr("width"),
+    map_height = +my_map.attr("height");
 
-// Map and projection
-var projection = d3.geoNaturalEarth()
-    .scale(width / 1.3 / Math.PI)
-    .translate([width / 2, height / 2])
+// set projection, scale, and position
+let map_projection = d3.geoNaturalEarth()
+    .scale(map_width / 1.3 / Math.PI)
+    .translate([map_width / 2, map_height / 2])
 
-// Load external data and boot
-d3.json("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/world.geojson", function(data){
+// Load external data
+d3.json("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/world.geojson", function(map_data){
 
-    // Draw the map
-    svg.append("g")
-        .selectAll("path")
-        .data(data.features)
-        .enter().append("path")
-            .attr("fill", "#69b3a2")
-            .attr("d", d3.geoPath()
-                .projection(projection)
-            )
-            .style("stroke", "#fff")
+    // draw the map
+    my_map.append("g")
+      .selectAll("map_features")
+      .data(map_data.features)
+      .enter() // for each each data point
+        .append("path")
+          .attr("fill", "green")
+          .attr("d", d3.geoPath()
+              .projection(map_projection)
+          )
+          .style("stroke", "white")
 })
 
 </script>
