add different projections

--- a/different_projections_map.html
+++ b/different_projections_map.html
@@ -22,6 +22,12 @@ my_map
 
 // set projection, scale, and position
 let map_projection = d3.geoNaturalEarth()
+//let map_projection = d3.geoAiry()
+//let map_projection = d3.geoAitoff()
+//let map_projection = d3.geoArmadillo()
+//let map_projection = d3.geoAzimuthalEqualArea()
+//let map_projection = d3.geoBaker()
+//let map_projection = d3.geoBoggs()
     .scale(map_width / 1.3 / Math.PI)
     .translate([map_width / 2, map_height / 2])
 
