--- a/different_projections_map.html
+++ b/different_projections_map.html
@@ -28,8 +28,8 @@ let map_projection = d3.geoNaturalEarth()
 //let map_projection = d3.geoAzimuthalEqualArea()
 //let map_projection = d3.geoBaker()
 //let map_projection = d3.geoBoggs()
-    .scale(map_width / 1.3 / Math.PI)
-    .translate([map_width / 2, map_height / 2])
+    .scale(2*(1/Math.PI)*map_width)
+    .translate([1.5*map_width, 1.1*map_height])
 
 // Load external data
 d3.json("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/world.geojson", function(map_data){
@@ -37,7 +37,7 @@ d3.json("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/w
     // draw the map
     my_map.append("g")
       .selectAll("map_features")
-      .data(map_data.features)
+      .data(map_data.features.filter(function(d){return d.properties.name=="USA"}))
       .enter() // for each each data point
         .append("path")
           .attr("fill", "green")
