--- a/animated_projections_map.html
+++ b/animated_projections_map.html
@@ -44,7 +44,7 @@ d3.json("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/w
           .attr("d", d3.geoPath()
               .projection(map_projection)
           )
-          .style("stroke", "white")
+          .style("stroke", "white");
 })
 
 </script>
