--- a/animated_projections_map.html
+++ b/animated_projections_map.html
@@ -41,6 +41,11 @@ d3.json("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/w
           )
           .style("stroke", "white");
 
+
+    let init_delay = 0;
+    let delay_increment = 1500;
+    let trans_duration = 1500;
+
     // update map projection
     map_projection = d3.geoAiry()
     data_points
