--- a/animated_projections_map.html
+++ b/animated_projections_map.html
@@ -48,6 +48,8 @@ d3.json("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/w
 
     // update map projection
     map_projection = d3.geoAiry()
+      .scale(map_width / 1.3 / Math.PI)
+      .translate([map_width / 2, map_height / 2])
     data_points
       .transition()
         .duration(2000)
