--- a/animated_projections_map.html
+++ b/animated_projections_map.html
@@ -57,6 +57,72 @@ d3.json("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/w
       .attr("d", d3.geoPath()
           .projection(map_projection))
 
+    // update map projection
+    map_projection = d3.geoAitoff()
+      .scale(map_width / 1.3 / Math.PI)
+      .translate([map_width / 2, map_height / 2])
+    data_points
+      .transition()
+        .delay(init_delay + 1*delay_increment)
+        .duration(trans_duration)
+      .attr("d", d3.geoPath()
+          .projection(map_projection))
+
+    // update map projection
+    map_projection = d3.geoArmadillo()
+      .scale(map_width / 1.3 / Math.PI)
+      .translate([map_width / 2, map_height / 2])
+    data_points
+      .transition()
+        .delay(init_delay + 2*delay_increment)
+        .duration(trans_duration)
+      .attr("d", d3.geoPath()
+          .projection(map_projection))
+
+    // update map projection
+    map_projection = d3.geoAzimuthalEqualArea()
+      .scale(map_width / 1.3 / Math.PI)
+      .translate([map_width / 2, map_height / 2])
+    data_points
+      .transition()
+        .delay(init_delay + 3*delay_increment)
+        .duration(trans_duration)
+      .attr("d", d3.geoPath()
+          .projection(map_projection))
+
+    // update map projection
+    map_projection = d3.geoBaker()
+      .scale(map_width / 1.3 / Math.PI)
+      .translate([map_width / 2, map_height / 2])
+    data_points
+      .transition()
+        .delay(init_delay + 4*delay_increment)
+        .duration(trans_duration)
+      .attr("d", d3.geoPath()
+          .projection(map_projection))
+
+    // update map projection
+    map_projection = d3.geoBoggs()
+      .scale(map_width / 1.3 / Math.PI)
+      .translate([map_width / 2, map_height / 2])
+    data_points
+      .transition()
+        .delay(init_delay + 5*delay_increment)
+        .duration(trans_duration)
+      .attr("d", d3.geoPath()
+          .projection(map_projection))
+
+    // update map projection
+    map_projection = d3.geoNaturalEarth()
+      .scale(map_width / 1.3 / Math.PI)
+      .translate([map_width / 2, map_height / 2])
+    data_points
+      .transition()
+        .delay(init_delay + 6*delay_increment)
+        .duration(trans_duration)
+      .attr("d", d3.geoPath()
+          .projection(map_projection))
+
 })
 
 </script>
