--- a/choropleth_map.html
+++ b/choropleth_map.html
@@ -30,7 +30,7 @@ let map_projection = d3.geoNaturalEarth()
 let background_map_data = d3.map();
 var color_scale = d3.scaleThreshold()
   .domain([100000, 1000000, 10000000, 30000000, 100000000, 500000000])
-  .range(d3.schemeBlues[7]);
+  .range(d3.schemePurples[7]);
 
 // Load external data
 d3.queue()
