--- a/choropleth_map2.html
+++ b/choropleth_map2.html
@@ -28,7 +28,7 @@ let map_projection = d3.geoNaturalEarth()
 
 // load d3 map and color scale variables
 let background_map_data = d3.map();
-var color_scale = d3.scaleThreshold()
+let color_scale = d3.scaleThreshold()
   .domain([100000, 1000000, 10000000, 30000000, 100000000, 500000000])
   .range(d3.schemePurples[7]);
 
