--- a/carto_thing.html
+++ b/carto_thing.html
@@ -8,6 +8,13 @@
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.css" rel="stylesheet">
 
     <!-- Your style will go here -->
+    <style>
+      #map {
+        position: absolute;
+        width: 100%;
+        height: 100%
+      }
+    </style>
   </head>
   <body>
     <!-- Your map will go here -->
