--- a/carto_thing.html
+++ b/carto_thing.html
@@ -19,5 +19,15 @@
   <body>
     <!-- Your map will go here -->
     <div id="map"></div>
+
+    <script>
+      const map = new mapboxgl.Map({
+        container: 'map',
+        style: carto.basemaps.voyager,
+        center: [0, 30],
+        zoom: 2
+      })
+    </script>
+
   </body>
 </html>
