--- a/carto_thing.html
+++ b/carto_thing.html
@@ -27,6 +27,11 @@
         center: [0, 30],
         zoom: 2
       })
+
+    carto.setDefaultAuth({
+      username: 'public',
+      apiKey: 'default_public'
+    })
     </script>
 
   </body>
