add data layer ports

--- a/carto_thing.html
+++ b/carto_thing.html
@@ -32,6 +32,11 @@
       username: 'public',
       apiKey: 'default_public'
     })
+
+    const viz = new carto.Viz();
+    const source = new carto.source.Dataset('world_ports')
+    const layer = new carto.Layer('layer', source, viz);
+    layer.addTo(map);
     </script>
 
   </body>
