change dot colors

--- a/carto_thing.html
+++ b/carto_thing.html
@@ -36,8 +36,8 @@
     const viz = new carto.Viz(`
       width: 4
       strokeWidth: 0.5
-      strokeColor: black
-      color: rgb(10,185,107)
+      strokeColor: white
+      color: fuchsia
     `);
     const source = new carto.source.Dataset('world_ports')
     const layer = new carto.Layer('layer', source, viz);
