--- a/carto_thing.html
+++ b/carto_thing.html
@@ -44,6 +44,35 @@
     const source = new carto.source.Dataset('world_ports')
     const layer = new carto.Layer('layer', source, viz);
     layer.addTo(map);
+
+    // Define pop-up
+    const popup = new mapboxgl.Popup({
+      closeButton: false,
+      closeOnClick: false
+    });
+
+    // Define interactivity
+    const interactivity = new carto.Interactivity(layer);
+
+    interactivity.on('featureHover', updatePopup);
+
+    function updatePopup(event) {
+      if (event.features.length > 0) {
+        const vars = event.features[0].variables;
+        popup.setHTML(`
+                <div>
+                    <h3 class ="h3">hello</h3>
+                    <p class="description open-sans">Population: yo</h3>
+                </div>
+            `);
+        popup.setLngLat([event.coordinates.lng, event.coordinates.lat]);
+        if (!popup.isOpen()) {
+          popup.addTo(map);
+        }
+      } else {
+        popup.remove();
+      }
+    }
   </script>
 
 </body>
