--- a/carto_thing.html
+++ b/carto_thing.html
@@ -64,8 +64,8 @@
         const vars = event.features[0].variables;
         popup.setHTML(`
                 <div>
-                    <h3 class ="h3">hello</h3>
-                    <p class="description open-sans">Population: yo</h3>
+                    <h3 class ="h3">${vars.country_name.value}</h3>
+                    <p class="description open-sans">Population: ${vars.pop_2015.value}</h3>
                 </div>
             `);
         popup.setLngLat([event.coordinates.lng, event.coordinates.lat]);
