--- a/area_chart_us_pop.html
+++ b/area_chart_us_pop.html
@@ -28,7 +28,7 @@
       "translate(" + margin.left + "," + margin.top + ")");
 
   //Read the data
-  let my_data = [{
+  let data = [{
     'date': 1950,
     'value': 158804
   }, {
@@ -243,53 +243,38 @@
     'value': 331003
   }]
 
-  d3.csv("https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/3_TwoNumOrdered_comma.csv",
+  // Add X axis --> it is a date format
+  var x = d3.scaleTime()
+    .domain(d3.extent(data, function(d) {
+      return d.date;
+    }))
+    .range([0, width]);
+  svg.append("g")
+    .attr("transform", "translate(0," + height + ")")
+    .call(d3.axisBottom(x));
 
-    // When reading the csv, I must format variables:
-    function(d) {
-      return {
-        date: d3.timeParse("%Y-%m-%d")(d.date),
-        value: d.value
-      }
-    },
+  // Add Y axis
+  var y = d3.scaleLinear()
+    .domain([0, d3.max(data, function(d) {
+      return +d.value;
+    })])
+    .range([height, 0]);
+  svg.append("g")
+    .call(d3.axisLeft(y));
 
-    // Now I can use this dataset:
-    function(data) {
-
-      // Add X axis --> it is a date format
-      var x = d3.scaleTime()
-        .domain(d3.extent(data, function(d) {
-          return d.date;
-        }))
-        .range([0, width]);
-      svg.append("g")
-        .attr("transform", "translate(0," + height + ")")
-        .call(d3.axisBottom(x));
-
-      // Add Y axis
-      var y = d3.scaleLinear()
-        .domain([0, d3.max(data, function(d) {
-          return +d.value;
-        })])
-        .range([height, 0]);
-      svg.append("g")
-        .call(d3.axisLeft(y));
-
-      // Add the area
-      svg.append("path")
-        .datum(data)
-        .attr("fill", "#cce5df")
-        .attr("stroke", "#69b3a2")
-        .attr("stroke-width", 1.5)
-        .attr("d", d3.area()
-          .x(function(d) {
-            return x(d.date)
-          })
-          .y0(y(0))
-          .y1(function(d) {
-            return y(d.value)
-          })
-        )
-
-    })
+  // Add the area
+  svg.append("path")
+    .datum(data)
+    .attr("fill", "#cce5df")
+    .attr("stroke", "#69b3a2")
+    .attr("stroke-width", 1.5)
+    .attr("d", d3.area()
+      .x(function(d) {
+        return x(d.date)
+      })
+      .y0(y(0))
+      .y1(function(d) {
+        return y(d.value)
+      })
+    )
 </script>
