--- a/area_chart_us_pop.html
+++ b/area_chart_us_pop.html
@@ -244,7 +244,7 @@
   }]
 
   // Add X axis --> it is a date format
-  var x = d3.scaleTime()
+  var x = d3.scaleLinear()
     .domain(d3.extent(data, function(d) {
       return d.date;
     }))
