--- a/area_chart_us_pop.html
+++ b/area_chart_us_pop.html
@@ -251,7 +251,7 @@
     .range([0, width]);
   svg.append("g")
     .attr("transform", "translate(0," + height + ")")
-    .call(d3.axisBottom(x));
+    .call(d3.axisBottom(x).tickFormat(d3.format("d")));
 
   // Add Y axis
   var y = d3.scaleLinear()
