--- a/area_chart_us_pop.html
+++ b/area_chart_us_pop.html
@@ -253,6 +253,14 @@
     .attr("transform", "translate(0," + height + ")")
     .call(d3.axisBottom(x).tickFormat(d3.format("d")));
 
+  // text label for the x axis
+  svg.append("text")
+    .attr("transform",
+      "translate(" + (width / 2) + " ," +
+      (height + margin.top + 20) + ")")
+    .style("text-anchor", "middle")
+    .text("Date");
+
   // Add Y axis
   var y = d3.scaleLinear()
     .domain([0, d3.max(data, function(d) {
