--- a/area_chart_us_pop.html
+++ b/area_chart_us_pop.html
@@ -270,6 +270,15 @@
   svg.append("g")
     .call(d3.axisLeft(y));
 
+  // text label for the y axis
+  svg.append("text")
+    .attr("transform", "rotate(-90)")
+    .attr("y", 0 - margin.left)
+    .attr("x", 0 - (height / 2))
+    .attr("dy", "1em")
+    .style("text-anchor", "middle")
+    .text("Population");
+
   // Add the area
   svg.append("path")
     .datum(data)
