--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta charset="utf-8">
   <title>D3 Page Template</title>
 
-
+  <script src="https://d3js.org/d3.v4.js"></script>
 
 
 </head>
+<script type="text/javascript">
+  //yo
+</script>
 
 <body>
 
