--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>D3 Page Template</title>
+  <title>My title</title>
 
   <script src="https://d3js.org/d3.v4.js"></script>
 
