--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 
 
 </head>
-<script type="text/javascript">
-  //yo
-</script>
+
 
 <body>
 
+  <div id="graph_div"></div>
+
+  <script type="text/javascript">
+    //yo
+  </script>
 </body>
 
 </html>
