make the data come from locally

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
     // read data
-    d3.csv("https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/2_TwoNum.csv", function(sample_data) {
+    d3.csv("2_TwoNum.csv", function(sample_data) {
 
       // add x axis
       let x = d3.scaleLinear()
