--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       data_points
         .transition()
         .delay(function(d, i) {
-          return (i * 3)
+          return (i / 1)
         })
         .duration(2000)
         .attr("cx", function(d) {
