--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 
 <body>
-  <!-- graph area -->
-
-
-
+  <!-- div that will contain visualization -->
   <div id="chart_area"></div>
 
   <script>
