--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="chart_area"></div>
 
   <script>
-    let margin = {
+    let chart_padding = {
         top: 10,
         right: 50,
         bottom: 50,
@@ -20,8 +20,8 @@
       },
       container_width = 460,
       container_height = 400,
-      graph_width = container_width - margin.left - margin.right,
-      graph_height = container_height - margin.top - margin.bottom;
+      graph_width = container_width - chart_padding.left - chart_padding.right,
+      graph_height = container_height - chart_padding.top - chart_padding.bottom;
 
     let chart_area = d3.select("#chart_area")
       .attr("id", "chart_area")
@@ -34,7 +34,7 @@
     let graph_elems = graph_obj
       .append("g")
       .attr("id", "graph_elems")
-      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+      .attr("transform", "translate(" + chart_padding.left + "," + chart_padding.top + ")");
 
     // read data
     d3.csv("bluebikedata.csv", function(sample_data) {
