--- a/index.html
+++ b/index.html
@@ -12,32 +12,33 @@
   <div id="chart_area"></div>
 
   <script>
-    let chart_padding = {
+    let chart_area_padding = {
         top: 10,
         right: 50,
         bottom: 50,
         left: 85
       },
-      container_width = 460,
-      container_height = 400,
-      graph_width = container_width - chart_padding.left - chart_padding.right,
-      graph_height = container_height - chart_padding.top - chart_padding.bottom;
+
+      chart_area_width = 460,
+      chart_area_height = 400,
+      graph_width = chart_area_width - chart_area_padding.left - chart_area_padding.right,
+      graph_height = chart_area_height - chart_area_padding.top - chart_area_padding.bottom;
 
     let chart_area = d3.select("#chart_area")
       .attr("id", "chart_area")
-    let graph_obj = chart_area
+    let chart_background = chart_area
       .append("svg")
-      .attr("id", "graph_obj")
-      .attr("width", container_width)
-      .attr("height", container_height)
+      .attr("id", "chart_background")
+      .attr("width", chart_area_width)
+      .attr("height", chart_area_height)
       .attr("style", "background: lightgrey");
-    let graph_elems = graph_obj
+    let graph_elems = chart_background
       .append("g")
       .attr("id", "graph_elems")
-      .attr("transform", "translate(" + chart_padding.left + "," + chart_padding.top + ")");
+      .attr("transform", "translate(" + chart_area_padding.left + "," + chart_area_padding.top + ")");
 
     // read data
-    d3.csv("bluebikedata.csv", function(sample_data) {
+    d3.csv("bluebikedata.csv", function(bike_data) {
 
       // add x axis
       let x = d3.scaleLinear()
@@ -63,7 +64,7 @@
       // binding data
       let data_points = graph_elems
         .selectAll("data_points")
-        .data(sample_data)
+        .data(bike_data)
         .enter()
         .append("circle")
         .attr("cx", function(d) {
@@ -79,12 +80,12 @@
       // update x axis
       x.domain([0, 4000]);
 
-      graph_obj.select("#x_axis")
+      chart_background.select("#x_axis")
         .transition()
         .duration(2000)
         .call(d3.axisBottom(x));
 
-      // update data points
+      // transition the points to their correct location
       data_points
         .transition()
         .delay(function(d, i) {
