--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           return y(d.SalePrice)
         })
         .attr("class", "data_point")
-        .attr("fill", "#69b3a2")
         .attr("r", 1.5);
+        .attr("fill", "rgb(63,72,204)")
 
       // animate data points to travel to their x-coordinate location from the left
       x.domain([0, 4000]); // by first adjusting the domain of the x-axis
