--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       .attr("height", chart_area_height)
       .attr("style", "background: lightgrey");
 
-    // add x axis label
+    // add x-axis label
     chart_background.append("text")
       .attr("text-anchor", "middle")
       .attr("x", (graph_width / 2) + chart_area_padding.left)
