--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       .attr("transform", "translate(" + chart_area_padding.left + "," + chart_area_padding.top + ")");
 
     // read data
-    d3.csv("bluebikedata.csv", function(bike_data) {
+    d3.csv("bluebikedatatimeinmin.csv", function(bike_data) {
 
       // add x axis
       let x = d3.scaleLinear()
