--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       graph_width = chart_area_width - chart_area_padding.left - chart_area_padding.right,
       graph_height = chart_area_height - chart_area_padding.top - chart_area_padding.bottom;
 
-    // set parameters for the maximum and minimum data points to be displayed
+    // set min and max values for axes
     let x_val_min = 0,
       x_val_max = 1440,
       y_val_min = 0,
