--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       data_points
         .transition()
         .delay(function(d, i) {
-          return (i / 1)
+          return (i)
         })
         .duration(2000)
         .attr("cx", function(d) {
